--- a/expanse/index.html
+++ b/expanse/index.html
@@ -44,7 +44,7 @@
 			</div>
 		</section>
 
-		<section id="first" class="d-flex d-center d-row">
+		<section id="first" class="d-flex d-center d-row d-wrap">
 			<div class="d-flex d-center d-col d-grid-2-4">
 				<p>Prolong sitting can cause serious damage to the human body, including more than thirty types of chronic illnesses and acute medical issues, such as <strong>Deep Vein Thrombosis (DVT)</strong>. Taking breaks during long hours of sitting is one way to mitigate these health risks. But what do you do during a long haul flight in a cramped economy seat?</p>
 				<img src="/expanse/images/002.jpg"/>
@@ -73,12 +73,12 @@
 			</div>
 		</section>
 
-		<section class="d-flex d-row" style="background: #000; width: 100%">
+		<section class="d-flex d-row d-wrap" style="background: #000; width: 100%">
 			<img src="/expanse/images/003.jpg"/>
 			<p class="text-margin" style="color: #fff">I gamified the anti-DVT in-seat exercise experience for the long-haul economy class passenger, with various research and design methods.</p>
 		</section>
 
-		<section class="d-flex d-row d-grid-100">
+		<section class="d-flex d-row d-wrap d-grid-100">
 			<p class="text-margin">The highlight of my design is the rapid iteration at the original scale of the seat. It expedited user testing significantly.</p>
 			<img src="/expanse/images/004.jpg"/>
 		</section>
@@ -92,7 +92,7 @@
 			<img src="/expanse/images/005mayNeedSomeAdjustment.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>Desktop Research</h4>
 				<p>To make it easier for me to build connections between the information as well as to explain it to discuss my rationals with my committees, I made a big physical board with selected information.</p>
@@ -101,7 +101,7 @@
 			<img src="/expanse/images/006.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>Expert Interview</h4>
 				<p>I consulted with Dr. Brenda Zierler and Dr. Basia, experts of DVT.</p>
@@ -112,19 +112,19 @@
 			<img src="/expanse/images/007.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>Field Trip</h4>
 				<p>To gain more insights, I conducted contextual research. I took a round flight from Seattle to Chicago and collected data to inform the following ideation process</p>
 			</div>
 			<img src="/expanse/images/008.jpg"/>
 		</section>
-		<section class="no-margin d-flex d-center d-row d-grid-100">
+		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
 			<p>Photos and noties from the field trip were arranged for discussion.</p>
 			<img src="/expanse/images/009.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>Ideation</h4>
 				<p>Sketching is my favorite way to ideate and communicate concepts. I like clipping sketches and pin them together.<br/>
@@ -132,12 +132,12 @@
 			</div>
 			<img src="/expanse/images/010.jpg"/>
 		</section>
-		<section class="no-margin d-flex d-center d-row d-grid-100">
+		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
 			<p>Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
 			<img src="/expanse/images/011.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>3D Modeling</h4>
 				<p>To ensure that the design aligns with Federal aviation regulation (FAR), I referred to the current economy seat structure for the parameters and main structure design.</p>
@@ -145,7 +145,7 @@
 			<img src="/expanse/images/012.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div>
 				<h4>Rapid Prototyping</h4>
 				<p>I used cardboard for iteration. Compared with prototyping using the 3D printer or other expansive materials, which is commonly seen in the airline industry, I found cardboard prototyping more ecient. It allows for both accuracy and quick modification.</p>
@@ -153,7 +153,7 @@
 			<img src="/expanse/images/013.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-2-4">
 				<h4>User Testing</h4>
 				<p>Asking my picky designer friends to sit in my cardboard chair probably is the most exacting part of this project.</p>
@@ -172,18 +172,18 @@
 			<p class="d-flex d-col d-grid-1-4">Several seats were built in a week following users feedbacks to test different ideas.</p>
 		</section>
 
-		<section class="d-flex d-start d-row d-grid-100">
+		<section class="d-flex d-start d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-1-4">
 				<h4>Video Editing</h4>
 				<p>I created the surface in Rhino 3D and rendered the animation in Keyshot. The video was created in two days in After Effect.</p>
 			</div>
 		</section>
 
-		<section class="no-margin d-flex d-center d-row d-grid-100">
+		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
 			<img src="/expanse/images/019.jpg"/>
 		</section>
 
-		<section class="d-flex d-center d-row d-grid-100">
+		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-1-4">
 				<h4>Exhibition Design</h4>
 				<p>The project was exhibited in Henry Art Gallery. I iterated different exhibition designs to see how can I better communicate the design to a</p>
@@ -193,10 +193,10 @@
 			</div>
 		</section>
 
-		<section class="no-margin d-flex d-center d-row d-grid-100">
+		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
 			<img src="/expanse/images/021.jpg"/>
 		</section>
-		<section class="no-margin d-flex d-center d-row d-grid-100">
+		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
 			<img src="/expanse/images/022.jpg"/>
 		</section>
 
