--- a/expanse/index.html
+++ b/expanse/index.html
@@ -75,11 +75,11 @@
 
 		<section class="d-flex d-row d-wrap" style="background: #000; width: 100%">
 			<img src="/expanse/images/003.jpg"/>
-			<p class="text-margin" style="color: #fff">I gamified the anti-DVT in-seat exercise experience for the long-haul economy class passenger, with various research and design methods.</p>
+			<p class="text-margin d-grid-1-4" style="color: #fff">I gamified the anti-DVT in-seat exercise experience for the long-haul economy class passenger, with various research and design methods.</p>
 		</section>
 
 		<section class="d-flex d-row d-wrap d-grid-100">
-			<p class="text-margin">The highlight of my design is the rapid iteration at the original scale of the seat. It expedited user testing significantly.</p>
+			<p class="text-margin d-grid-1-4">The highlight of my design is the rapid iteration at the original scale of the seat. It expedited user testing significantly.</p>
 			<img src="/expanse/images/004.jpg"/>
 		</section>
 
@@ -93,7 +93,7 @@
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>Desktop Research</h4>
 				<p>To make it easier for me to build connections between the information as well as to explain it to discuss my rationals with my committees, I made a big physical board with selected information.</p>
 				<p>From desktop research, I formed the initial research questions and found the people for experts interviews.</p>
@@ -102,7 +102,7 @@
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>Expert Interview</h4>
 				<p>I consulted with Dr. Brenda Zierler and Dr. Basia, experts of DVT.</p>
 				<p>By interviewing them, I realized that prolonged sitting during the long haul flight is a problem that has been under-addressed. </p>
@@ -113,19 +113,19 @@
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>Field Trip</h4>
 				<p>To gain more insights, I conducted contextual research. I took a round flight from Seattle to Chicago and collected data to inform the following ideation process</p>
 			</div>
 			<img src="/expanse/images/008.jpg"/>
 		</section>
 		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
-			<p>Photos and noties from the field trip were arranged for discussion.</p>
+			<p class="d-grid-1-4">Photos and noties from the field trip were arranged for discussion.</p>
 			<img src="/expanse/images/009.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>Ideation</h4>
 				<p>Sketching is my favorite way to ideate and communicate concepts. I like clipping sketches and pin them together.<br/>
 				Overtime, I will have an ideation wall that shows my thinking process to people around, so they give me their suggestion easily.</p>
@@ -133,12 +133,12 @@
 			<img src="/expanse/images/010.jpg"/>
 		</section>
 		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
-			<p>Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
+			<p class="d-grid-1-4">Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
 			<img src="/expanse/images/011.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>3D Modeling</h4>
 				<p>To ensure that the design aligns with Federal aviation regulation (FAR), I referred to the current economy seat structure for the parameters and main structure design.</p>
 			</div>
@@ -146,7 +146,7 @@
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div>
+			<div class="d-grid-1-4">
 				<h4>Rapid Prototyping</h4>
 				<p>I used cardboard for iteration. Compared with prototyping using the 3D printer or other expansive materials, which is commonly seen in the airline industry, I found cardboard prototyping more ecient. It allows for both accuracy and quick modification.</p>
 			</div>
@@ -154,11 +154,12 @@
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
-			<div class="d-flex d-col d-grid-2-4">
+			<div class="d-flex d-col d-grid-1-4">
 				<h4>User Testing</h4>
 				<p>Asking my picky designer friends to sit in my cardboard chair probably is the most exacting part of this project.</p>
 				<p>I conducted rapid prototyping and user testings at the same time and adjust the design accordingly immediately after each test.</p>
 			</div>
+			<div class="d-flex d-col d-grid-1-4"></div>
 			<div class="d-flex d-col d-grid-2-4">
 				<img src="/expanse/images/014.jpg"/>
 				<img src="/expanse/images/015.jpg"/>
