--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="caption">
 				<div class="caption-content">
 					<h3>Immersive Cabin Experience</h3>
-					<h4>Research to Reduce visually-induced motion sickness</h4>
+					<h4>Reducing visually-induced motion sickness</h4>
 				</div>
 			</div>
 			<img src="/immersive-cabin/boeing-allure.jpg" class="img-responsive" style="width: 100%; height: 100%;"></a>
