--- a/ultimate-match/index.html
+++ b/ultimate-match/index.html
@@ -7,13 +7,13 @@
 	<title>Ultimate Match | Rachel Xu</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/flexslider.css">
-	<link rel="stylesheet" href="../css/main.css">
-	<link rel="stylesheet" href="../css/responsive.css">
-	<link rel="stylesheet" href="../css/animate.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/flexslider.css">
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/css/responsive.css">
+	<link rel="stylesheet" href="/css/animate.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link href="./css/main.css" rel="stylesheet">
+	<link href="/ultimate-match/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -23,8 +23,8 @@
 		<div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
 		<nav class="navigation" role="navigation">
 			<ul class="primary-nav">
-			<li><a href="/">Home</a></li>
 			<li><a href="/about">About me</a></li>
+			<li><a href="/#projects">Projects</a></li>
 			<li><a href="/l#contact">contact</a></li>
 			</ul>
 		</nav>
@@ -34,85 +34,75 @@
 </div>
 
 <section class="fill-height d-flex d-center">
-	<img src="images/txt_ultimate-match.png" class="fill-width"/>
+	<img src="/ultimate-match/images/txt_ultimate-match.png" class="fill-width"/>
 </section>
 
 <section class="fill-height d-flex d-center">
-	<div class="d-flex d-row d-center">
-		<img src="images/txt_prelude.png" class="med"/>
+	<div class="d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/txt_prelude.png" class="med"/>
 		<div class="d-flex d-center">
-			<img src="images/img_prelude.png"/>
+			<img src="/ultimate-match/images/img_prelude.png"/>
 		</div>
+	</div>
+</section>
+
+<section class="fill-height d-flex d-center xtra-v-pad">
+	<div class="d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/img_step1.png" class="large"/>
+		<img src="/ultimate-match/images/txt_step1.png"/>
 	</div>
 </section>
 
 <section class="fill-height d-flex d-center">
-	<div class="d-flex d-row d-center">
-		<img src="images/img_step1.png" class="large"/>
-		<div class="align-top">
-			<img src="images/txt_step1.png"/>
-		</div>
+	<div class="d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/img_step2.png" class="med"/>
+		<img src="/ultimate-match/images/txt_step2.png"/>
 	</div>
 </section>
 
-<section class="fill-height d-flex d-center">
-	<div class="d-flex d-row d-center">
-		<img src="images/img_step2.png" class="med"/>
-		<div class="align-top">
-			<img src="images/txt_step2.png"/>
-		</div>
-	</div>
-</section>
-
-<section class="fill-height d-flex d-col d-center">
+<section class="fill-height d-flex d-col d-center xtra-v-pad-bot">
 	<div class="d-flex d-center">
 		<div style="margin-top: 5vh; width: 100%" class="step3 d-flex d-row d-h-center d-start">
 			<div class="step3-img xl">
-				<img src="images/imgstep3algeBright.jpg" class="xl"/>
-				<img src="images/imgstep3algeDim.jpg" class="xl step3-img--top"/>
+				<img src="/ultimate-match/images/imgstep3algeBright.jpg" class="xl"/>
+				<img src="/ultimate-match/images/imgstep3algeDim.jpg" class="xl step3-img--top"/>
 			</div>
 
-			<img src="images/imgstep3suit.jpg" class="xl"/>
+			<img src="/ultimate-match/images/imgstep3suit.jpg" class="xl"/>
 
 			<div class="step3-img xl">
-				<img src="images/imgstep3gearBright.jpg" class="xl"/>
-				<img src="images/imgstep3gearDim.jpg" class="xl step3-img--top"/>
+				<img src="/ultimate-match/images/imgstep3gearBright.jpg" class="xl"/>
+				<img src="/ultimate-match/images/imgstep3gearDim.jpg" class="xl step3-img--top"/>
 			</div>
 		</div>
 		<div class="step3-text">
-			<img src="images/txt_step3.png"/>
+			<img src="/ultimate-match/images/txt_step3.png"/>
 		</div>
 	</div>
 
-	<div class="d-flex d-row d-center">
-		<img src="images/img_step3part2.png" class="med"/>
-		<div class="align-top">
-			<img src="images/txt_step3part2.png"/>
-		</div>
+	<div class="step3-fireworks d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/img_step3part2.png" class="med"/>
+		<img src="/ultimate-match/images/txt_step3part2.png"/>
 	</div>
 </section>
 
-<section class="fill-height d-flex d-center">
-	<div class="d-flex d-row d-center">
-		<img src="images/img_step4-part1.png" class="med"/>
-		<div class="align-top">
-			<img src="images/txt_step4.png"/>
-		</div>
+<section class="fill-height d-flex d-center xtra-v-pad">
+	<div class="d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/img_step4-part1.png" class="med"/>
+		<img src="/ultimate-match/images/txt_step4.png"/>
 	</div>
-    	<div class="d-flex d-row d-center">
-		<img src="images/img_step4.png" class="med"/>
-		<div class="align-top">
-			<img src="images/txt_step4part2.png"/>
-		</div>
+    	<div class="d-flex d-row d-wrap d-center">
+		<img src="/ultimate-match/images/img_step4.png" class="med"/>
+		<img src="/ultimate-match/images/txt_step4part2.png"/>
 	</div>
 
 </section>
 
 <section class="fill-height d-flex d-center">
-		<img src="images/final_step_merged.jpg" class="step5-img"/>
+		<img src="/ultimate-match/images/final_step_merged.jpg" class="step5-img"/>
 	<div class="step5 d-flex d-row d-center">
 		<div class="step5-text">
-			<img src="images/txt_step5.png"/>
+			<img src="/ultimate-match/images/txt_step5.png"/>
 		</div>
 	</div>
 </section>
