--- a/interactive/index.html
+++ b/interactive/index.html
@@ -24,8 +24,8 @@
 		<div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
 			<nav class="navigation" role="navigation">
 				<ul class="primary-nav">
-					<li><a href="/">Home</a></li>
 					<li><a href="/about">About me</a></li>
+					<li><a href="/#projects">Projects</a></li>
 					<li><a href="/#contact">contact</a></li>
 				</ul>
 			</nav>
