--- a/ultimate-match/index.html
+++ b/ultimate-match/index.html
@@ -86,16 +86,15 @@
 	</div>
 </section>
 
-<section class="fill-height d-flex d-center xtra-v-pad">
-	<div class="d-flex d-row d-wrap d-center">
+<section class="fill-height d-flex d-row d-center xtra-v-pad">
+	<div class="d-flex d-col d-center">
 		<img src="/ultimate-match/images/img_step4-part1.png" class="med"/>
 		<img src="/ultimate-match/images/txt_step4.png"/>
 	</div>
-    	<div class="d-flex d-row d-wrap d-center">
+    <div class="d-flex d-col d-center">
 		<img src="/ultimate-match/images/img_step4.png" class="med"/>
 		<img src="/ultimate-match/images/txt_step4part2.png"/>
 	</div>
-
 </section>
 
 <section class="fill-height d-flex d-center">
