--- a/expanse/index.html
+++ b/expanse/index.html
@@ -94,70 +94,70 @@
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>Desktop Research</h4>
-				<p>To make it easier for me to build connections between the information as well as to explain it to discuss my rationals with my committees, I made a big physical board with selected information.</p>
-				<p>From desktop research, I formed the initial research questions and found the people for experts interviews.</p>
+				<h4 class="c-override-1">Desktop Research</h4>
+				<p class="c-override-1">To make it easier for me to build connections between the information as well as to explain it to discuss my rationals with my committees, I made a big physical board with selected information.</p>
+				<p class="c-override-1">From desktop research, I formed the initial research questions and found the people for experts interviews.</p>
 			</div>
 			<img src="/expanse/images/006.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>Expert Interview</h4>
-				<p>I consulted with Dr. Brenda Zierler and Dr. Basia, experts of DVT.</p>
-				<p>By interviewing them, I realized that prolonged sitting during the long haul flight is a problem that has been under-addressed. </p>
-				<p>Prolong sitting in cramped space compound with dehydration will drastically increase the risk of DVT</p>
-				<p>Doctors also suggested directions, such as providing more space for the passengers to relax, encouraging them to drink more water, and most importantly reminding them to work out their calf muscles.</p>
+				<h4 class="c-override-2">Expert Interview</h4>
+				<p class="c-override-2">I consulted with Dr. Brenda Zierler and Dr. Basia, experts of DVT.</p>
+				<p class="c-override-2">By interviewing them, I realized that prolonged sitting during the long haul flight is a problem that has been under-addressed. </p>
+				<p class="c-override-2">Prolong sitting in cramped space compound with dehydration will drastically increase the risk of DVT</p>
+				<p class="c-override-2">Doctors also suggested directions, such as providing more space for the passengers to relax, encouraging them to drink more water, and most importantly reminding them to work out their calf muscles.</p>
 			</div>
 			<img src="/expanse/images/007.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>Field Trip</h4>
-				<p>To gain more insights, I conducted contextual research. I took a round flight from Seattle to Chicago and collected data to inform the following ideation process</p>
+				<h4 class="c-override-3">Field Trip</h4>
+				<p class="c-override-3">To gain more insights, I conducted contextual research. I took a round flight from Seattle to Chicago and collected data to inform the following ideation process</p>
 			</div>
 			<img src="/expanse/images/008.jpg"/>
 		</section>
 		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
-			<p class="d-grid-1-4">Photos and noties from the field trip were arranged for discussion.</p>
+			<p class="d-grid-1-4 c-override-3">Photos and noties from the field trip were arranged for discussion.</p>
 			<img src="/expanse/images/009.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>Ideation</h4>
-				<p>Sketching is my favorite way to ideate and communicate concepts. I like clipping sketches and pin them together.<br/>
+				<h4 class="c-override-4">Ideation</h4>
+				<p class="c-override-4">Sketching is my favorite way to ideate and communicate concepts. I like clipping sketches and pin them together.<br/>
 				Overtime, I will have an ideation wall that shows my thinking process to people around, so they give me their suggestion easily.</p>
 			</div>
 			<img src="/expanse/images/010.jpg"/>
 		</section>
 		<section class="no-margin d-flex d-center d-row d-wrap d-grid-100">
-			<p class="d-grid-1-4">Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
+			<p class="d-grid-1-4 c-override-4">Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
 			<img src="/expanse/images/011.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>3D Modeling</h4>
-				<p>To ensure that the design aligns with Federal aviation regulation (FAR), I referred to the current economy seat structure for the parameters and main structure design.</p>
+				<h4 class="c-override-5">3D Modeling</h4>
+				<p class="c-override-5">To ensure that the design aligns with Federal aviation regulation (FAR), I referred to the current economy seat structure for the parameters and main structure design.</p>
 			</div>
 			<img src="/expanse/images/012.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-grid-1-4">
-				<h4>Rapid Prototyping</h4>
-				<p>I used cardboard for iteration. Compared with prototyping using the 3D printer or other expansive materials, which is commonly seen in the airline industry, I found cardboard prototyping more ecient. It allows for both accuracy and quick modification.</p>
+				<h4 class="c-override-6">Rapid Prototyping</h4>
+				<p class="c-override-6">I used cardboard for iteration. Compared with prototyping using the 3D printer or other expansive materials, which is commonly seen in the airline industry, I found cardboard prototyping more ecient. It allows for both accuracy and quick modification.</p>
 			</div>
 			<img src="/expanse/images/013.jpg"/>
 		</section>
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-1-4">
-				<h4>User Testing</h4>
-				<p>Asking my picky designer friends to sit in my cardboard chair probably is the most exacting part of this project.</p>
-				<p>I conducted rapid prototyping and user testings at the same time and adjust the design accordingly immediately after each test.</p>
+				<h4 class="c-override-7">User Testing</h4>
+				<p class="c-override-7">Asking my picky designer friends to sit in my cardboard chair probably is the most exacting part of this project.</p>
+				<p class="c-override-7">I conducted rapid prototyping and user testings at the same time and adjust the design accordingly immediately after each test.</p>
 			</div>
 			<div class="d-flex d-col d-grid-1-4"></div>
 			<div class="d-flex d-col d-grid-2-4">
@@ -170,13 +170,13 @@
 
 		<section class="d-flex d-center d-col d-grid-100">
 			<img src="/expanse/images/018.jpg"/>
-			<p class="d-flex d-col d-grid-1-4">Several seats were built in a week following users feedbacks to test different ideas.</p>
+			<p class="d-flex d-col d-grid-1-4 c-override-7">Several seats were built in a week following users feedbacks to test different ideas.</p>
 		</section>
 
 		<section class="d-flex d-start d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-1-4">
-				<h4>Video Editing</h4>
-				<p>I created the surface in Rhino 3D and rendered the animation in Keyshot. The video was created in two days in After Effect.</p>
+				<h4 class="c-override-8">Video Editing</h4>
+				<p class="c-override-8">I created the surface in Rhino 3D and rendered the animation in Keyshot. The video was created in two days in After Effect.</p>
 			</div>
 		</section>
 
@@ -186,8 +186,8 @@
 
 		<section class="d-flex d-center d-row d-wrap d-grid-100">
 			<div class="d-flex d-col d-grid-1-4">
-				<h4>Exhibition Design</h4>
-				<p>The project was exhibited in Henry Art Gallery. I iterated different exhibition designs to see how can I better communicate the design to a</p>
+				<h4 class="c-override-9">Exhibition Design</h4>
+				<p class="c-override-9">The project was exhibited in Henry Art Gallery. I iterated different exhibition designs to see how can I better communicate the design to a</p>
 			</div>
 			<div class="d-flex d-end d-grid-3-4">
 				<img src="/expanse/images/020.jpg"/>
