--- a/ultimate-match/index.html
+++ b/ultimate-match/index.html
@@ -34,9 +34,28 @@
 </div>
 
 <section class="fill-height d-flex d-center">
+    <div class="centered-text">
+	<p>Ultimate Match is a future scenario project.
+It aims to use design as a tool to provoke thinking, and to help avoid undesired consequences (avoid + plural noun / a + singular thing). </p>
+
+The project is based on reading, secondary research, discussion with the designers and professors at UW, and my own speculation.
+
+Ultimate Match is a service ( a company that offers services / a service ) that is situated in a future world with severe pollution, unequal access(accessibility is for handicap people) to technology, and an ever-increasing demand for technology that supports emotional needs.
+
+It provides a mixed reality dating experience and matches users with their ultimate matches by an intense filtering system and an AI-empowered[sic] personality analysis.
+
+The project showcases a series of potential design solutions that meet people's desires but might lead romance to an undesired direction.
+
+For example, the personality analysis takes the form of the user's dream date's avatar. Instead of going through endless personality questions or adjusting filters, the user can enjoy dating his/her dream date in the mixed reality world while getting their personality analyzed. 
+
+If the romantic experience with an AI is itself perfect, will you keep dating the AI instead of going through real challenges to date a less ideal human? 
+    </div>
+</section>
+    
+<section class="fill-height d-flex d-center">
 	<img src="/ultimate-match/images/txt_ultimate-match.png" class="fill-width"/>
 </section>
-
+    
 <section class="fill-height d-flex d-center">
 	<div class="d-flex d-row d-wrap d-center">
 		<img src="/ultimate-match/images/txt_prelude.png" class="med"/>
